Organize source files

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,8 +7,8 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                // "${file}",
-                "${fileDirname}\\**.cpp",
+                "${file}",
+                "${fileDirname}\\src\\**.cpp",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "-I", 
