--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "string": "cpp",
         "format": "cpp",
         "thread": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "xlocinfo": "cpp",
+        "cwchar": "cpp"
     }
 }
