Add setting: initialize / Refactor: food_list

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,7 @@
                 "-I", 
                 "${fileDirname}\\include",
                 "-I", 
-                "${fileDirname}\\include\\openai",
+                "${fileDirname}\\openai",
                 "-I",
                 "${fileDirname}\\curl-8.11.0_1-win64-mingw\\include",
                 "-L",
